--- a/KernelMethods/Exercises/Exercise4.ipynb
+++ b/KernelMethods/Exercises/Exercise4.ipynb
@@ -5,6 +5,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Javier Aguilar Martín"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Implementing PCA\n"
    ]
   },
